# LS-SEG

./: README.md  requirements.txt
lsseg_slicer_extension/: CMakeLists.txt
lsseg_slicer_extension/lsseg_slicer_extension/: CMakeLists.txt  lsseg_slicer_extension.py
lsseg_slicer_extension/lsseg_slicer_extension/Resources/UI/: lsseg_slicer_extension.ui
lsseg_slicer_extension/lsseg_slicer_extension/lsseg/: __init__.py  config.py  geometry.py  segmentation.py  utils.py
notebooks/: 01_Threshold-Based_segmentation_example_synthetic_data.ipynb  utils_nb_03.py
scripts/: clean.ps1  clean.sh
